<resources>
    <string name="app_name">Kotlin Tutor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in_text">Sign In</string>
    <string name="welcome_to">Welcome to</string>
    <string name="kotlintutor">KotlinTutor</string>
    <string name="a_simple_app_that_teaches_kotlin_fundamentals">A simple App that teaches Kotlin fundamentals.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="topic">Topic</string>
    <string name="description">Description</string>
    <string name="list_of_topics">List of Topics</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_account_with_kotlintutor">Create an Account With KotlinTutor</string>
    <string name="Lesson1">Kotlin Introduction</string>
    <string name="Lesson2">Kotlin Variables</string>
    <string name="Lesson3">Kotlin Comments</string>
    <string name="Lesson4">Kotlin Data Types</string>
    <string name="Lesson5">Kotlin Operators</string>
    <string name="Lesson6">Kotlin Arrays</string>
    <string name="Lesson7">Kotlin Ranges</string>
    <string name="Lesson8">Kotlin Strings</string>
    <string name="Lesson9">Kotlin Booleans</string>
    <string name="Lesson10">Kotlin Functions</string>
    <string name="Lesson11">Kotlin Classes and Objects</string>
    <string name="Lesson12">Kotlin Class Functions</string>
    <string name="Lesson13">Kotlin Constructors</string>
    <string name="Lesson14">Kotlin Inheritance</string>
    <string name="Lesson15">Kotlin OOP</string>
    <string name="images">images</string>
    <string name="on_board_text">Kotlin is a modern, trending programming language.
        \n\nKotlin is easy to learn especially if you already know java (it is 100% compatible with Java)
        \n\nKotlin is used to develop android Apps, server side apps and much more.</string>
    <string name="start_learning_kotlin_now"><![CDATA[Start Learning Kotlin now >>]]></string>
    <string name="learn_kotlin">Learn Kotlin</string>
</resources>